tooling/nargo_cli/tests/snapshots/execution_success/nested_array_dynamic_simple/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "1998584279744703196": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _10",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:32 bits []",
    "EXPR [ (1, _0) (-1, _1) -3 ]",
    "BLACKBOX::RANGE [_1]:32 bits []",
    "EXPR [ (-1, _2) 1 ]",
    "EXPR [ (-1, _3) 2 ]",
    "EXPR [ (-1, _4) 3 ]",
    "INIT (id: 0, len: 3, witnesses: [_2, _3, _4])",
    "EXPR [ (3, _1) (-1, _5) 0 ]",
    "MEM (id: 0, read at: EXPR [ (1, _5) 0 ], value: EXPR [ (1, _6) 0 ]) ",
    "EXPR [ (1, _5) (-1, _7) 1 ]",
    "MEM (id: 0, read at: EXPR [ (1, _7) 0 ], value: EXPR [ (1, _8) 0 ]) ",
    "EXPR [ (1, _7) (-1, _9) 1 ]",
    "MEM (id: 0, read at: EXPR [ (1, _9) 0 ], value: EXPR [ (1, _10) 0 ]) ",
    "EXPR [ (1, _6) -1 ]",
    "EXPR [ (1, _8) -2 ]",
    "EXPR [ (1, _10) -3 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
