tooling/nargo_cli/tests/snapshots/execution_success/nested_array_dynamic_simple/execute__tests__nested_array_dynamic_simple_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
  ┌─ src/main.nr:5:31
  │
5 │     let fetched_value = array[x - 3];
  │                               -----
  │
